<resources>
    <string name="app_name">Shopify</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="help_and_support">Help and Support</string>
    <string name="my_account">My Account</string>
    <string name="my_notifications">My Notifications</string>
    <string name="my_chats">My Chats</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="help_centre">Help Centre</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_and_support">Share and Support</string>
    <string name="exit">Exit</string>
    <string name="legal">Legal</string>
    <string name="shopify_plus">Shopify Plus</string>
    <string name="all_categories">All Categories</string>
    <string name="more_on_shopify">More On Shopify</string>
    <string name="choose_a_language">Choose a Language</string>
    <string name="offer_zone">𝐎𝐟𝐟𝐞𝐫 𝐙𝐨𝐧𝐞</string>
    <string name="sell_on_shopify">Sell On Shopify</string>
    <string name="home">𝐇𝐎𝐌𝐄</string>
    <string name="shopify">🅂🄷🄾🄿🄸🄵🅈</string>
    <string name="grocery">𝐆𝐫𝐨𝐜𝐞𝐫𝐲</string>
    <string name="mobiles">𝐌𝐨𝐛𝐢𝐥𝐞𝐬</string>
    <string name="fashion">𝐅𝐚𝐬𝐡𝐢𝐨𝐧</string>
    <string name="electronics">𝐄𝐥𝐞𝐜𝐭𝐫𝐨𝐧𝐢𝐜𝐬</string>
    <string name="for_home">𝐅𝐨𝐫 𝐇𝐨𝐦𝐞</string>
    <string name="beauty">𝐁𝐞𝐚𝐮𝐭𝐲</string>
    <string name="appliances">𝐀𝐩𝐩𝐥𝐢𝐚𝐧𝐜𝐞𝐬</string>
    <string name="toys_baby">𝐓𝐨𝐲𝐬 ＆ 𝐁𝐚𝐛𝐲</string>
    <string name="flights">𝐅𝐥𝐢𝐠𝐡𝐭𝐬</string>
    <string name="insurance">𝐈𝐧𝐬𝐮𝐫𝐚𝐧𝐜𝐞</string>
    <string name="sports">𝐒𝐩𝐨𝐫𝐭𝐬</string>
    <string name="food">𝐅𝐨𝐨𝐝</string>
    <string name="gift_cards">𝐆𝐢𝐟𝐭 𝐂𝐚𝐫𝐝𝐬</string>
    <string name="_4_4">4.4★</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="notifications">Notifications</string>
    <string name="proceed_to_buy">Proceed To Buy</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="product_image">Product Image</string>
    <string name="other_offers_and_product_info_will_be_there_in_further_updates">Other Offers and product info will be there in further updates..</string>
    <string name="Open_Navigation_Drawer">Open Navigation Drawer</string>
    <string name="close_Navigation_Drawer">Close Navigation Drawer</string>
    <string name="search_for_products_brands_and_more">Search for Products, Brands and More</string>
    <string name="_2_28_236">(2,28,236)</string>
    <string name="_10_off">10% off</string>
</resources>