<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="0dp"
        android:background="@color/blue"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopify"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_below="@id/toolbar"
        android:layout_height="50dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:src="@drawable/ic_baseline_search_24" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:maxLines="1"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:hint="@string/search_for_products_brands_and_more"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:background="@color/blue"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/offerzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer_zone" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/grocery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mobiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiles" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/electronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/forhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/appliances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appliances" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/toysandbaby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toys_baby" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/flights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/insurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/giftcards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_cards" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_tabs"
        tools:listitem="@layout/list_item" />


</RelativeLayout>