<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <ImageButton
        android:id="@+id/favourites_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:contentDescription="@string/product_image"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        tools:text="This is a product name textview this will contain a product name" />


    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_4"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/item_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="₹9,999"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rating"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/free_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_delivery"
        android:textColor="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintTop_toBottomOf="@id/item_price_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/other_offers_and_product_info_will_be_there_in_further_updates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/free_delivery" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addToCart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_height="match_parent"
                android:text="@string/add_to_cart"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/buyNow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/orange"
                android:text="@string/buy_now"
                android:textSize="20sp" />

        </LinearLayout>



    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>